Bug 917441 - Remove dependence of IonBuilder on ScriptAnalysis, r=jandem.